# SQLi-BruteForcer-Test-RustServer

./: README.md
brute_forcer/: README.md  brute_forcer.py  main_bf.py  passwords.txt  usernames.txt
db/: users
sqli_example/: Cargo.toml  test_request.http
sqli_example/release/: run_Safe_sqli.sh  run_Unsafe_sqli.sh
sqli_example/release/static/: index.html  login.html  style.css
sqli_example/src/: main.rs
sqli_example/static/: script.js
