[package]
name = "sqli_example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = "0.7"
tokio = { version = "1", features = ["rt", "macros", "net"] }

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true      # Enable link-time optimizations.
codegen-units = 1  # Reduce codegen units to improve optimizations.